Clean up code quality: deprecations, resource leaks, security hardening, and bug fixes
Replace deprecated constructors (new Integer/Double/Float/Boolean/Long) with
valueOf(), fix string comparison using == instead of equals(), add null checks
for File.listFiles(), close resources properly (streams, classloaders, file
channels), remove explicit System.gc() calls, use SecureRandom for password
generation, harden XML processing against XXE, add volatile to shared mutable
fields, replace infinite retry loop with bounded retries, use UTF-8 encoding
for file I/O, modernize Class.newInstance() to getDeclaredConstructor pattern,
fix README formatting, and rewrite README for downstream fork context.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>