@@ -142,10 +142,10 @@ public class FormPropertiesDialog extends JDialog {
 
         PublicationRecognitionStructure prs =
             PreferencesManager.getPublicationRecognitionStructure();
-        luminanceThresholdSpinner.setValue(new Integer(prs.getLuminanceCutOff()));
-        markThresholdSpinner.setValue(new Integer(prs.getMarkThreshold()));
-        fragmentPaddingSpinner.setValue(new Integer(prs.getFragmentPadding()));
-        deskewThresholdSpinner.setValue(new Double(prs.getDeskewThreshold()));
+        luminanceThresholdSpinner.setValue(Integer.valueOf(prs.getLuminanceCutOff()));
+        markThresholdSpinner.setValue(Integer.valueOf(prs.getMarkThreshold()));
+        fragmentPaddingSpinner.setValue(Integer.valueOf(prs.getFragmentPadding()));
+        deskewThresholdSpinner.setValue(Double.valueOf(prs.getDeskewThreshold()));
         performDeskewCheckBox.setSelected(prs.isPerformDeskew());
 
     }
@@ -1512,10 +1512,10 @@ public class FormPropertiesDialog extends JDialog {
         // restore recognition settings
         PublicationRecognitionStructure prs =
             documentAttributes.getPublicationRecognitionStructure();
-        luminanceThresholdSpinner.setValue(new Integer(prs.getLuminanceCutOff()));
-        markThresholdSpinner.setValue(new Integer(prs.getMarkThreshold()));
-        fragmentPaddingSpinner.setValue(new Integer(prs.getFragmentPadding()));
-        deskewThresholdSpinner.setValue(new Double(prs.getDeskewThreshold()));
+        luminanceThresholdSpinner.setValue(Integer.valueOf(prs.getLuminanceCutOff()));
+        markThresholdSpinner.setValue(Integer.valueOf(prs.getMarkThreshold()));
+        fragmentPaddingSpinner.setValue(Integer.valueOf(prs.getFragmentPadding()));
+        deskewThresholdSpinner.setValue(Double.valueOf(prs.getDeskewThreshold()));
         performDeskewCheckBox.setSelected(prs.isPerformDeskew());
 
         // restore the fieldname duplicate presets
